add links to accommodations, activities, travel arrangements, photos, and contact info

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
   </head>
   <body>
     <div class="image">
-      <h1><span>Pink Pearl Island Resort & Spa</span></h1>
-      <p><span>No shoes required, good times a must.</span></p>
+      <h1>Pink Pearl Island Resort & Spa</h1>
+      <p>No shoes required, good times a must.</p>
       <img src="img/resort.jpg" alt="A photo of Pink Pearl Island Resort">
     </div>
+    <p><a href="accommodations.html">Accommodations</a></p>
+    <p><a href="activities.html">Activities</a></p>
+    <p><a href="travel-arrangements.html">Travel Arrangements</a></p>
+    <p><a href="pictures.html">Photos</a></p>
+    <p><a href="contactinfo.html">Contact Us</a></p>
   </body>
 </html>
