--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Pink Pearl Island Resort</title>
   </head>
   <body>
     <div class="image">
       <h1>Pink Pearl Island Resort & Spa</h1>
-      <p>No shoes required, good times a must.</p>
       <img src="img/resort.jpg" alt="A photo of Pink Pearl Island Resort">
+      <p>Located in the beautiful Motu Opuou, French Polynesia</p>
     </div>
+    <br>
     <p><a href="accommodations.html">Accommodations</a></p>
     <p><a href="activities.html">Activities</a></p>
     <p><a href="travel-arrangements.html">Travel Arrangements</a></p>
