--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="image">
       <h1>Pink Pearl Island Resort & Spa</h1>
-      <img src="img/resort.jpg" alt="A photo of Pink Pearl Island Resort">
+      <!-- <img src="img/resort.jpg" alt="A photo of Pink Pearl Island Resort"> -->
       <p>Located in the beautiful Motu Opuou, French Polynesia</p>
     </div>
     <br>
