add paragraph text to travel arrangements and two images.

--- a/activities.html
+++ b/activities.html
@@ -6,6 +6,12 @@
     <title></title>
   </head>
   <body>
-
+    <h2>Activities:</h2>
+      <ul>
+        <li>Snorkeling</li>
+        <li>Swimming</li>
+        <li>Boat rides</li>
+        <li>Relaxation</li>
+      </ul>
   </body>
 </html>
