--- a/travel-arrangements.html
+++ b/travel-arrangements.html
@@ -6,6 +6,11 @@
     <title></title>
   </head>
   <body>
-
+    <div class="image">
+      <h2 id="header">Travel Arrangements</h2>
+    </div>
+    <p>We advise you plan travel arrangements far in advance. Once you arrive on the mainland our small aircraft will bring you to the islands. From there you will board an exotic island hopper to your private island getaway.</p>
+    <img src="img/runway.jpg" alt="image of an island runway">
+    <img src="img/boat.jpg" alt="image of a boat" height="311px" width="500px"> 
   </body>
 </html>
