--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   </head>
   <body>
     <div class="image">
-      <h1>Pink Pearl Island Resort & Spa</h1>
-      <!-- <img src="img/resort.jpg" alt="A photo of Pink Pearl Island Resort"> -->
-      <p>Located in the beautiful Motu Opuou, French Polynesia</p>
+      <h1 id="header">Pink Pearl Island Resort & Spa</h1>
+      <p id="description">Located in the beautiful Motu Opuou, French Polynesia</p>
     </div>
     <br>
     <p><a href="accommodations.html">Accommodations</a></p>
