add description and two images to accomodations page

--- a/accommodations.html
+++ b/accommodations.html
@@ -6,6 +6,11 @@
     <title></title>
   </head>
   <body>
-
+    <div class="image">
+      <h2 id="header">Accomodations</h2>
+    </div>
+    <p>Each room comes equipped with the most amazing view and your own private pool and ocean access.</p>
+    <img src="img/outsideroom.jpg" alt="image of island huts">
+    <img src="img/roomview.jpg" alt="image of hut room">
   </body>
 </html>
