--- a/activities.html
+++ b/activities.html
@@ -6,12 +6,13 @@
     <title></title>
   </head>
   <body>
-    <h2>Activities:</h2>
-      <ul>
-        <li>Snorkeling</li>
-        <li>Swimming</li>
-        <li>Boat rides</li>
-        <li>Relaxation</li>
-      </ul>
+    <div class="image">
+      <h2 id="header">Activities:</h2>
+    </div>
+    <p>We offer a variety of activities for the whole family! Please see the front desk on our Welcome Island to register for activities</p>
+    <img src="img/swimwithturtles.jpg" alt="image of woman swimming with turtles">
+    <img src="img/massage.jpeg" alt="photo of a massage">
+    <img src="img/footmassage.jpg" alt="photo of foot massage">
+    <img src="img/dinner.JPG" alt="photo of an island dinner">
   </body>
 </html>
