add contact info to contact us page

--- a/contactinfo.html
+++ b/contactinfo.html
@@ -6,6 +6,11 @@
     <title></title>
   </head>
   <body>
-
+    <div class="image">
+      <h2 id="header">Contact Us</h2>
+    </div>
+    <p>Please call or email us with any questions or to make a reservation.</p>
+    <p>(555) 555 5555</p>
+    <p>islandemail@island.com</p>
   </body>
 </html>
