add head and photos to photo page

--- a/accommodations.html
+++ b/accommodations.html
@@ -12,5 +12,6 @@
     <p>Each room comes equipped with the most amazing view and your own private pool and ocean access.</p>
     <img src="img/outsideroom.jpg" alt="image of island huts">
     <img src="img/roomview.jpg" alt="image of hut room">
+    <img src="img/underwaterroom.jpg" alt="image of underwater room">
   </body>
 </html>
