--- a/pictures.html
+++ b/pictures.html
@@ -6,6 +6,15 @@
     <title></title>
   </head>
   <body>
-
+    <div class="image">
+      <h2 id="header">Photos</h2>
+    </div>
+    <br>
+    <img src="img/reef.jpg" alt="image of reef">
+    <img src="img/seal.jpg" alt="image of seal">
+    <img src="img/swing.jpg" alt="image of swing">
+    <img src="img/tucan.jpg" alt="image of tucan">
+    <img src="img/happypeople.jpg" alt="image of happy people">
+    <img src="img/bedthing.jpg" alt="image of bed thing">
   </body>
 </html>
